2002-06-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* fit latest prelude-getopt API change.

2002-06-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c (read_multiline): 
	moved to libprelude, common function.
	(parse_ruleset): use prelude_read_multiline().

2002-06-16  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c: 
	Included patch from Arnaud Guignard <arnaud.guignard@free.fr> 
	to handle the process IDMEF object.

2002-06-14  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* Makefile.am (install-data-local): 
	use $(DESTDIR) as the top prefix for installing stuff.

2002-06-13  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

        Patch from Arnaud Guignard <arnaud.guignard@free.fr> :

	* plugins/simple/simple.c (parse_ruleset):
	fixed a bug when a TAB was at a beginning of a line in a
	multiline rule.

2002-06-10  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* configure.in: only enable gtkdoc if requested.

	* plugins/simple/ruleset/simple.rules (include): 
	include grsecurity.rules.

	* plugins/simple/simple.c (read_multiline): 
	new function, handle multiline (line ending with \).

	(parse_ruleset): use read_multiline().
	(parse_ruleset): handle TAB at the begining of the line.
	

2002-06-06  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (generate_analyzer): 
	generate analyzer. Use prelude_analyzer_fill_infos().
	(send_heartbeat_cb): use generate_analyzer()
	(lml_emit_alert): ditto.

	* plugins/simple/ruleset/grsecurity.rules: 
	Included GRsecurity ruleset, from Brad Spengler 
	<spender@grsecurity.net>. 

	Hand modified it a little to add some missing parenthesis, 
	and change /d and /w to \d and \w respectively.

	* plugins/simple/ruleset/Makefile.am (ruleset_DATA): 
	install grsecurity.rules.

2002-06-03  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (lml_alert_init): 
	setup analyzer here; register heartbeat callback.